--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -124,6 +124,103 @@ img{
 	width: 100%;
 	right: 0px;
 }
+.contenedor-general{
+	width:  800px;
+	height: 500px;
+    top: 125px;
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	overflow: hidden;
+	perspective: 800px;
+
+	box-shadow: 0 20px 40px 0 black;
+}
+
+.contenedor-img{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	transform: translateX(-100%) rotateY(360deg);
+	opacity: 0;
+	transition: all 1s;
+}
+
+#img1{
+	transform: translateX(0) ;
+	opacity: 1;
+}
+
+.contenedor-img:target{
+	transform: translateX(0) rotateY(0deg);
+	opacity: 1;
+}
+.contenedor-img img{
+
+	width: 100%;
+	height: 100%;
+}
+.icon-left-open{
+    position: absolute;
+    top: 250px;
+    left: 0px;
+	font-size: 40px;
+	color:  #fc8600 ;	
+}
+.icon-right-open{
+    position: absolute;
+    top: 250px;
+    right: 0;
+	font-size: 40px;
+	color:  #fc8600 ;	
+}
+.contenedor-detalles {
+	position: relative;
+	color: orange;
+	top: -200px;
+    text-align: center;
+	padding: 10px;
+	background: rgba(0,0,0,0.5);
+	font-family: arial;
+}
+
+.contenedor-detalles p{
+
+	margin-top: 10px;
+}
+
+
+.contenedor-detalles input[type="button"]{
+    padding: 10px 40px;
+    font-size: 18px;
+    margin-top: 10px;
+    background: rgba(255,165,0,0.5);
+    border-style: none;
+    color: orange;
+    outline: 0px;
+    transition: all 300ms;
+
+}
+.contenedor-detalles input[type="button"]:hover{
+
+	background: rgba(0,0,0,0.5);
+	cursor: pointer;
+	transition: all 300ms;
+}
+.final{
+	height: 150px;
+	width: 100%;
+	top: 200px;
+	background: black;
+	position: relative;
+}
+
+.final h1{
+
+	font-size: 30px;
+	color: white;
+}
+
 @keyframes movimiento{
 	from{
 		background-position: top;
